added working drop down

--- a/production/index.html
+++ b/production/index.html
@@ -124,32 +124,34 @@
 			<div class="left_block">
 				<div class="wrap_1">
 					<div class="drop_down">
-						<header><span>{{mainObj.catalogPage.menu1_1}}</span></header>
+						<header><span>{{dropDown1Filter}}</span></header>
 						<div class="list_block">
-							<div class="list_elem">{{mainObj.catalogPage.menu1_1}}</div>
-							<div class="list_elem">{{mainObj.catalogPage.menu1_2}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu1_3, 1)">{{mainObj.catalogPage.menu1_3}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu1_1, 1)">{{mainObj.catalogPage.menu1_1}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu1_2, 1)">{{mainObj.catalogPage.menu1_2}}</div>
 						</div>
 					</div>
 				</div>	
 				<div class="wrap_2">
 					<div class="drop_down">
-						<header><span>{{mainObj.catalogPage.menu2_1}}</span></header>
+						<header><span>{{dropDown2Filter}}</span></header>
 						<div class="list_block">
-							<div class="list_elem">{{mainObj.catalogPage.menu2_1}}</div>
-							<div class="list_elem">{{mainObj.catalogPage.menu2_2}}</div>
-							<div class="list_elem">{{mainObj.catalogPage.menu2_3}}</div>
-							<div class="list_elem">{{mainObj.catalogPage.menu2_4}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu1_3, 2)">{{mainObj.catalogPage.menu1_3}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu2_1, 2)">{{mainObj.catalogPage.menu2_1}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu2_2, 2)">{{mainObj.catalogPage.menu2_2}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu2_3, 2)">{{mainObj.catalogPage.menu2_3}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu2_4, 2)">{{mainObj.catalogPage.menu2_4}}</div>
 						</div>
 					</div>
 				</div>	
 				<div class="wrap_3">
 					<div class="drop_down">
-						<header><span>{{mainObj.catalogPage.menu3_1}}</span></header>
+						<header><span>{{dropDown3Filter}}</span></header>
 						<div class="list_block">
-							<div class="list_elem">{{mainObj.catalogPage.menu3_1}}</div>
-							<div class="list_elem">{{mainObj.catalogPage.menu3_2}}</div>
-							<div class="list_elem">{{mainObj.catalogPage.menu3_3}}</div>
-							<div class="list_elem">{{mainObj.catalogPage.menu3_4}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu3_1, 3)">{{mainObj.catalogPage.menu3_1}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu3_2, 3)">{{mainObj.catalogPage.menu3_2}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu3_3, 3)">{{mainObj.catalogPage.menu3_3}}</div>
+							<div class="list_elem" ng-click="changeValueFilter(mainObj.catalogPage.menu3_4, 3)">{{mainObj.catalogPage.menu3_4}}</div>
 						</div>
 					</div>
 				</div>
