--- a/production/index.html
+++ b/production/index.html
@@ -458,7 +458,17 @@
 					<a class="fancybox last" rel="gallery1" href="http://farm1.staticflickr.com/291/18653638823_a86b58523c_b.jpg">
 						<img src="http://farm1.staticflickr.com/291/18653638823_a86b58523c_m.jpg">
 					</a>
-				</div>				
+				</div>	
+				<div class="manager">
+					<h3>Менеджер</h3>
+					<div class="photo_wrap">
+						<img src="img/manager.jpeg" alt="">
+					</div>
+					<div class="info">
+						<h4>Имя Фамилия</h4>
+						<h5>Телефон</h5>
+					</div>
+				</div>			
 			</div>
 			<div class="second_column">
 				<h4>{{info.name}}</h4>
@@ -479,6 +489,16 @@
 					<button>Отправить</button>
 				</form>
 			</div>
+			<script type="text/javascript">(function() {
+				  if (window.pluso)if (typeof window.pluso.start == "function") return;
+				  if (window.ifpluso==undefined) { window.ifpluso = 1;
+				    var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+				    s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+				    s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
+				    var h=d[g]('body')[0];
+				    h.appendChild(s);
+				  }})();</script>
+				<div class="pluso" data-background="none;" data-options="small,square,line,horizontal,counter,sepcounter=1,theme=14" data-services="facebook,vkontakte,linkedin,twitter"></div>
 		</div>
 	</div>
 </div>
